[package]
name = "rust-libp2p-webrtc-peer"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
futures = "0.3.27"
futures-timer = "3.0.2"
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev="580c7db", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay","dcutr", "kad", "rsa", "ed25519", "quic", "tcp", "yamux", "noise", "request-response", "dns", "memory-connection-limits"] }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", rev="580c7db", features = ["tokio", "pem"] }
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.68"
prost = "0.12.3"
webrtc-media = "=0.7.0"
webrtc-srtp = "=0.11.0"

[build-dependencies]
prost-build = "0.12.3"
